fix(report,calendar-css): adjust prev,next arrow alignment and resilve module not found error

--- a/nepal_compliance/public/css/calendar.css
+++ b/nepal_compliance/public/css/calendar.css
@@ -1,31 +1,3 @@
-.ndc-chevron::before {
-    border-style: solid;
-    border-width: .25em .25em 0 0;
-    content: "";
-    display: inline-block;
-    height: .3em;
-    left: .15em;
-    position: relative;
-    top: 5px;
-    transform: rotate(-45deg);
-    vertical-align: top;
-    width: .3em;
-    border-color: #fff;
-    box-sizing: initial
-}
-
-.ndc-chevron.ndc-right:before {
-    left: -1px;
-    transform: rotate(45deg);
-    top: 10px;
-}
-
-.ndc-chevron.ndc-left:before {
-    left: 1px;
-    transform: rotate(-135deg);
-    top: 10px;
-}
-
 div#ndp-nepali-box {
     position: absolute;
     top: -999px;
